Fixed visibility of show_note component

--- a/src/style/components/form_modal.scss
+++ b/src/style/components/form_modal.scss
@@ -1,6 +1,6 @@
 .form-modal-container {
   background-color: rgba(0,0,0,.85);
-  z-index: 99;
+  z-index: 100;
   position: fixed;
   height: 100%;
   width: 100%;
