--- a/src/style/index.css
+++ b/src/style/index.css
@@ -755,7 +755,7 @@ body {
           .restaurant-details .restaurant-details-content .restaurant-overview-display .restaurant-top-content .main-img a .photos-link {
             position: absolute;
             color: #000;
-            z-index: 100;
+            z-index: 1;
             left: 0px;
             color: #fff;
             font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
@@ -1250,7 +1250,7 @@ body {
 
 .form-modal-container {
   background-color: rgba(0, 0, 0, 0.85);
-  z-index: 99;
+  z-index: 100;
   position: fixed;
   height: 100%;
   width: 100%;
@@ -2551,7 +2551,7 @@ body {
 
 .note {
   position: relative;
-  z-index: 100; }
+  z-index: 1; }
   .note .res-basic-note {
     top: 138% !important;
     left: 40% !important;
